syntax="proto3";

import "google/protobuf/timestamp.proto";

package account;

option go_package="./;accountService";

message Account{
  string AccountID = 1;
  string PlayerID = 2;
  string Username = 3;
  string Email = 4;
  bool IsBan = 6;
  google.protobuf.Timestamp CreatedAt = 7;
  google.protobuf.Timestamp UpdatedAt = 8;
}

message CreateAccountReq{
  string AccountID = 1;
  string PlayerID = 2;
  string Username = 3;
  string Email = 4;
  string Password = 5;
}

message CreateAccountRes {
  string AccountID = 1;
  string PlayerID = 2;
}

message UpdateAccountReq{
  string AccountID  = 1;
  string Username = 2;
  string Email = 3;
}

message UpdateAccountRes {
  string AccountID = 1;
}

message ChangePasswordReq{
  string AccountID = 1;
  string OldPassword = 2;
  string NewPassword = 3;
}

message GetAccountByIdReq{
  string AccountID = 1;
}

message GetAccountByIdRes {
  Account Account = 1;
}

message SearchReq {
  string Search = 1;
  int64 page = 2;
  int64 size = 3;
}

message SearchRes {
  int64 TotalCount = 1;
  int64 TotalPages = 2;
  int64 Page = 3;
  int64 Size = 4;
  bool HasMore = 5;
  repeated Account Accounts = 6;
}

message DeleteAccountByIdReq{
  string AccountID = 1;
}

message DeleteAccountByIdRes{}